# TroubleShootAI

./: .env.example  .gitignore  .railwayignore  ARCHITECTURE.md  Dockerfile  MY_APPROACH_AND_THOUGHTS.md  PRE_SEARCH.md  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt  validation_report.json
.github/workflows/: ci.yml
bundle_analyzer/: __init__.py
bundle_analyzer/ai/: __init__.py  client.py  context_injector.py  deterministic_validator.py  evaluator.py  interview.py  orchestrator.py  synthesis.py
bundle_analyzer/api/: __init__.py  deps.py  firebase_auth.py  main.py  response_scrubber.py  schemas.py  session.py  upload.py
bundle_analyzer/bundle/: __init__.py  extractor.py  indexer.py  reader.py  troubleshoot_parser.py
bundle_analyzer/cli/: __init__.py  __main__.py  app.py  diff_report.py  html_report.py  pipeline.py  rich_report.py
bundle_analyzer/db/: __init__.py  database.py  models.py  repository.py
bundle_analyzer/graph/: __init__.py  chain_walker.py  models.py  resource_graph.py
bundle_analyzer/models/: __init__.py  ai_output.py  analysis.py  bundle.py  causal.py  evaluation.py  log_intelligence.py  triage.py  troubleshoot.py
bundle_analyzer/preflight/: __init__.py  runner.py
bundle_analyzer/rca/: __init__.py  hypothesis_engine.py  rules.py
bundle_analyzer/security/: __init__.py  audit.py  entropy.py  kubernetes.py  models.py  patterns.py  policy.py  prompt_guard.py  scrubber.py
bundle_analyzer/triage/: __init__.py  anomaly_detector.py  change_correlator.py  config_scanner.py  coverage_analyzer.py  crashloop_analyzer.py  dependency_scanner.py  deployment_scanner.py  dns_scanner.py  drift_scanner.py  engine.py  event_scanner.py  ingress_scanner.py  log_intelligence.py  network_policy_scanner.py  node_scanner.py  pod_scanner.py  probe_scanner.py  quota_scanner.py  rbac_scanner.py  resource_scanner.py  scheduling_scanner.py  silence_scanner.py  storage_scanner.py  tls_scanner.py  troubleshoot_scanner.py
demo-bundle/cluster-resources/: storage-classes.json
demo-cluster/: preflight-spec.yaml
demo-cluster-2/: setup.sh
demo-cluster-2/failures/: fail-01-wrong-port.yaml  fail-04-resource-quota.yaml  fail-05-pvc-pending.yaml
demo-cluster/failures/: break-01-crashloop.yaml  break-02-oom.yaml  (+3 more)
docs/: implementation_plan.md  implementation_roadmap.md  repo_audit.md  validation_report.md
frontend/: next.config.ts  package-lock.json  package.json
memory-bank/: active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
scripts/: scrub_test.py  validate_system.py
tests/: __init__.py  test_ai_pipeline.py  test_bundle_io.py  test_chain_walker.py  test_e2e_pipeline.py  test_integration.py  test_log_analyst.py  test_log_intelligence.py  test_new_scanners.py  test_phase8_scanners.py  test_rca_advanced_rules.py  test_regression.py  test_regression_rca.py  test_resource_graph.py  test_security.py  test_triage.py  test_troubleshoot_integration.py
(+230 files in other folders)
