[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bundle-analyzer"
version = "0.1.0"
description = "AI-powered Kubernetes support bundle forensics engine"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "aiofiles>=23.0.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-mock>=3.12.0"]

[project.scripts]
bundle-analyzer = "bundle_analyzer.cli:app"
